--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -5,4 +5,6 @@ django-environ==0.12.0
 django-filter==25.2
 djangorestframework==3.16.1
 environ==1.0
+gunicorn==23.0.0
+packaging==25.0
 sqlparse==0.5.3
