--- a/.github/workflows/main_flowgridbackend.yml
+++ b/.github/workflows/main_flowgridbackend.yml
@@ -15,6 +15,7 @@ jobs:
     runs-on: ubuntu-latest
     permissions:
       contents: read #This is required for actions/checkout
+      # oopsie
 
     steps:
       - uses: actions/checkout@v4
