--- a/.github/workflows/main_flowgridbackend.yml
+++ b/.github/workflows/main_flowgridbackend.yml
@@ -22,6 +22,7 @@ jobs:
       - name: Verify requirements install
         run: pip install -r requirements.txt
 
+      # Upload your Django source code (not the virtual env)
       - name: Upload artifact for deployment jobs
         uses: actions/upload-artifact@v4
         with:
@@ -38,7 +39,8 @@ jobs:
     needs: build
 
     steps:
-      - uses: actions/download-artifact@v4
+      - name: Download build artifact
+        uses: actions/download-artifact@v4
         with:
           name: python-app
           path: ./deploy_source
@@ -50,15 +52,9 @@ jobs:
           tenant-id: ${{ secrets.AZUREAPPSERVICE_TENANTID_0D95C4D5656D4AAF97D010932B314244 }}
           subscription-id: ${{ secrets.AZUREAPPSERVICE_SUBSCRIPTIONID_7E1EDDC4369E412D9BB28A3797F42DA2 }}
 
-      - uses: actions/download-artifact@v4
-        with:
-          name: python-app
-          path: ./deploy_source
-
       - name: Deploy to Azure Web App
         uses: azure/webapps-deploy@v3
         with:
           app-name: "FlowGridBackend"
           slot-name: "Production"
           package: ./deploy_source
-
