--- a/.github/workflows/main_flowgridbackend.yml
+++ b/.github/workflows/main_flowgridbackend.yml
@@ -33,7 +33,7 @@ jobs:
           name: python-app
           path: |
             backend/
-            backend/requirements.txt
+            requirements.txt
             backend/manage.py
             !**/venv/
             !**/antenv/
