--- a/.github/workflows/main_flowgridbackend.yml
+++ b/.github/workflows/main_flowgridbackend.yml
@@ -24,7 +24,7 @@ jobs:
 
       # quick syntax check
       - name: Verify requirements install
-        run: pip install -r backend/requirements.txt
+        run: pip install -r backend/backend/requirements.txt
 
       # Upload your Django source code (not the virtual env)
       - name: Upload artifact for deployment jobs
