--- a/.github/workflows/main_flowgridbackend.yml
+++ b/.github/workflows/main_flowgridbackend.yml
@@ -24,7 +24,10 @@ jobs:
 
       # quick syntax check
       - name: Verify requirements install
-        run: pip install -r backend/backend/requirements.txt
+        run: pip install -r backend/requirements.txt
+
+      - name: Copy requirements.txt up for Azure
+        run: cp backend/requirements.txt ./requirements.txt
 
       # Upload your Django source code (not the virtual env)
       - name: Upload artifact for deployment jobs
@@ -35,7 +38,7 @@ jobs:
             backend/backend/
             backend/main/
             backend/manage.py
-            backend/requirements.txt
+            requirements.txt
             !**/venv/
             !**/antenv/
             !**/.python_packages/
