--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -7,5 +7,7 @@ djangorestframework==3.16.1
 environ==1.0
 gunicorn==23.0.0
 packaging==25.0
-psycopg2-binary==2.9.11
+psycopg==3.2.12
+psycopg-binary==3.2.12
 sqlparse==0.5.3
+typing_extensions==4.15.0
