--- a/.github/workflows/main_flowgridbackend.yml
+++ b/.github/workflows/main_flowgridbackend.yml
@@ -63,3 +63,9 @@ jobs:
           app-name: "FlowGridBackend"
           slot-name: "Production"
           package: ./deploy_source
+
+      - name: Run Django Migrations
+        run: |
+          cd deploy_source/backend
+          pip install -r requirements.txt
+          python manage.py migrate --noinput
