--- a/.github/workflows/main_flowgridbackend.yml
+++ b/.github/workflows/main_flowgridbackend.yml
@@ -67,5 +67,5 @@ jobs:
       - name: Run Django Migrations
         run: |
           cd deploy_source/backend
-          pip install -r requirements.txt
+          pip install -r backend/requirements.txt
           python manage.py migrate --noinput
