--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -4,6 +4,7 @@ django-cors-headers==4.9.0
 django-environ==0.12.0
 django-filter==25.2
 djangorestframework==3.16.1
+drf-nested-routers==0.95.0
 environ==1.0
 gunicorn==23.0.0
 packaging==25.0
