--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@tanstack/react-query": "^5.90.5",
     "@tanstack/react-query-devtools": "^5.90.2",
+    "@use-gesture/react": "^10.3.1",
     "framer-motion": "^12.23.24",
     "lucide-react": "^0.546.0",
     "react": "^19.2.0",
