--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,6 +16,7 @@
     "@use-gesture/react": "^10.3.1",
     "framer-motion": "^12.23.24",
     "lucide-react": "^0.546.0",
+    "nanoid": "^5.1.6",
     "react": "^19.2.0",
     "react-cookie": "^8.0.1",
     "react-dom": "^19.2.0",
