--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,6 +13,7 @@
     "@dnd-kit/core": "^6.3.1",
     "@tanstack/react-query": "^5.90.5",
     "@tanstack/react-query-devtools": "^5.90.2",
+    "@tanstack/react-query-persist-client": "^5.90.13",
     "@use-gesture/react": "^10.3.1",
     "framer-motion": "^12.23.24",
     "lucide-react": "^0.546.0",
@@ -23,6 +24,7 @@
     "react-draggable": "^4.5.0",
     "react-grid-layout": "^1.5.2",
     "react-icons": "^5.5.0",
+    "react-loader-spinner": "^8.0.0",
     "react-resizable": "^3.0.5",
     "react-router-dom": "^7.9.4",
     "react-timer-hook": "^4.0.5",
